--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_back">#3772E7</color>
+    <color name="grey">#AEAFB4</color>
+    <color name="black_setting_menu">#000000</color>
 </resources>
