Sprint 8. Homework 2. Clicking on the buttons on the main screen is implemented using various methods. The first button uses an anonymous class to implement its functionality, the second uses a lambda expression, and the third also uses an anonymous class.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
 
     <Button
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -41,6 +42,7 @@
         app:iconTint="@color/black" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -56,6 +58,7 @@
         app:iconTint="@color/black" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
