--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:backgroundTint="@color/white"
-        android:text="@string/search_botton"
+        android:text="@string/search"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/text_normal"
@@ -47,7 +47,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:backgroundTint="@color/white"
-        android:text="@string/lib_botton"
+        android:text="@string/media"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/text_normal"
