--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,7 +15,9 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         app:navigationIcon="@drawable/ic_left_arrow"
-        app:title="@string/settings" />
+        app:title="@string/settings" >
+
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -31,7 +33,7 @@
             android:textSize="@dimen/text_16" />
 
         <Switch
-            android:id="@+id/simpleSwitch"
+            android:id="@+id/Switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
