--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/main_back"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="@dimen/Padding_20">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,51 +26,51 @@
 
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_search"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="@dimen/Main_height_butt"
+        android:layout_weight="@dimen/Main_weight_butt"
         android:backgroundTint="@color/white"
         android:text="@string/search"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/text_normal"
-        app:cornerRadius="16dp"
+        app:cornerRadius="@dimen/Rad_Butt_main"
         app:icon="@drawable/ic_search"
         app:iconGravity="textStart"
-        app:iconPadding="8dp"
+        app:iconPadding="@dimen/Int_Butt_main"
         app:iconTint="@color/black" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_media"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="@dimen/Main_height_butt"
+        android:layout_weight="@dimen/Main_weight_butt"
         android:backgroundTint="@color/white"
         android:text="@string/media"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/text_normal"
-        app:cornerRadius="16dp"
+        app:cornerRadius="@dimen/Rad_Butt_main"
         app:icon="@drawable/ic_library"
         app:iconGravity="textStart"
-        app:iconPadding="8dp"
+        app:iconPadding="@dimen/Int_Butt_main"
         app:iconTint="@color/black" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button_settings"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="@dimen/Main_height_butt"
+        android:layout_weight="@dimen/Main_weight_butt"
         android:backgroundTint="@color/white"
         android:text="@string/settings"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/text_normal"
-        app:cornerRadius="16dp"
+        app:cornerRadius="@dimen/Rad_Butt_main"
         app:icon="@drawable/ic_settings"
         app:iconGravity="textStart"
-        app:iconPadding="8dp"
+        app:iconPadding="@dimen/Int_Butt_main"
         app:iconTint="@color/black" />
 
 
