--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,39 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/Padding_20">
+    style="@style/set_LinearLayout_For_All_Layout_Without_Main_Layout">
 
-    <androidx.appcompat.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar style="@style/toolbar_Dimensions"
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:navigationIcon="@drawable/ic_left_arrow"
         app:title="@string/search" >
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:src="@drawable/work_in_progress"/>
+    <ImageView style="@style/work_In_Progress_Image"/>
 
-    <TextView
-        android:orientation="vertical"
-        android:padding="@dimen/Padding_20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/TBD"
-        android:textColor="@color/black_setting_menu"
-        android:textSize="@dimen/text_normal" />
+    <TextView style="@style/work_In_Progress_Text"/>
 
 </LinearLayout>
