--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
-    <dimen name="text_normal">22sp</dimen>
+    <dimen name="text_22">22sp</dimen>
     <dimen name="text_16">16sp</dimen>
     <dimen name="Int_Butt_main">8dp</dimen>
     <dimen name="Rad_Butt_main">16dp</dimen>
