--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -2,16 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/set_LinearLayout_For_All_Layout_Without_Main_Layout">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/YP_White"
+    android:orientation="vertical"
+    android:padding="@dimen/Padding_20">
 
     <androidx.appcompat.widget.Toolbar style="@style/toolbar_Dimensions"
         android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:title="@string/media">
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView style="@style/work_In_Progress_Image"/>
+    <ImageView style="@style/work_In_Progress_Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
-    <TextView style="@style/work_In_Progress_Text"/>
+    <TextView style="@style/work_In_Progress_Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
