--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<resources>
+<!-- Base application theme. -->
+<style name="Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/YP_Blue</item> <!-- Цвет главного activity-->
+    <!-- <item name="colorPrimaryVariant">@color/YP_Black</item>-->
+    <item name="colorOnPrimary">@color/YP_Black</item> <!--Цвет иконок и текстов в кнопках -->
+    <!-- Secondary brand color -->
+    <item name="colorSecondary">@color/YP_White</item> <!-- Цвет текста в тулбаре главного activity-->
+    <!-- <item name="colorSecondaryVariant">@color/teal_200</item>-->
+    <item name="colorOnSecondary">@color/YP_Black</item> <!-- Цвет текста и эконок в тулбара остальных activity-->
+
+</style>
+
 </resources>
