--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -4,25 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/Padding_20">
+    android:background="?attr/colorPrimary"
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar style="@style/toolbar_Dimensions"
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        style="@style/toolbar_Dimensions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/media">
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView style="@style/work_In_Progress_Image"
+    <ImageView
+        style="@style/work_In_Progress_Image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
-    <TextView style="@style/work_In_Progress_Text"
+    <TextView
+        style="@style/work_In_Progress_Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        app:titleTextColor="?attr/colorOnPrimary" />/>
 
 </LinearLayout>
