--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,17 +2,17 @@
 <resources>
     <!-- ________________________________Стили для Activity_main________________________________ -->
 
-    <style name="main_Layout_Button_Style"> <!-- Стиль для кнопок главного экрана -->
+    <style name="main_Layout_Button_Style" parent="Widget.MaterialComponents.Button.UnelevatedButton"> <!-- Стиль для кнопок главного экрана -->
+        <item name="iconPadding">@dimen/Int_Butt_main</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconTint">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="backgroundTint">?attr/colorSecondary</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">"?attr/colorOnPrimary"</item>
         <item name="android:textSize">@dimen/text_22</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="cornerRadius">@dimen/Rad_Butt_main</item>
-        <item name="iconGravity">textStart</item>
-        <item name="iconPadding">@dimen/Int_Butt_main</item>
-        <item name="iconTint">?attr/colorOnPrimary</item>
     </style>
 
     <style name="main_Layout_TextToolbar"> <!-- Стиль для текста тулбара главного экрана -->
@@ -22,18 +22,39 @@
         <item name="android:textColor">?attr/colorSecondary</item>
     </style>
     <!-- ______________________________Стили для Activity_settings______________________________ -->
-
-
-       <style name="setting_Layout_Items_Text"> <!-- Стиль для текстов на экране настройки -->
+    <style name="setting_Layout_switch"> <!-- Стиль для switch на экране настройки -->
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textSize">@dimen/text_16</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
+
+    <style name="setting_Layout_Items"> <!-- Стйки -->
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="setting_Layout_Items_Text"> <!-- Стиль для текстов на экране настройки -->
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
     <style name="settings_Layout_Image"> <!-- Стиль для картинок на экране настройки -->
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">end</item>
+    </style>
+    <!-- _________________________Стили для цвета тулбара_____________________________________ -->
+    <style name="TintedNavigation" parent="Widget.AppCompat.Toolbar.Button.Navigation">
+        <item name="tint">?attr/colorOnPrimary</item>
     </style>
     <!-- __________________Стили для тулбара на всех activity кроме main________________________ -->
     <style name="toolbar_Dimensions"> <!-- Стиль для тулбара -->
@@ -47,6 +68,7 @@
         <item name="android:orientation">vertical</item>
         <item name="android:src">@drawable/work_in_progress</item>
     </style>
+
     <style name="work_In_Progress_Text"> <!-- Стиль для текста заглушки -->
         <item name="android:orientation">vertical</item>
         <item name="android:padding">@dimen/Padding_20</item>
@@ -55,8 +77,7 @@
         <item name="android:textSize">@dimen/text_22</item>
     </style>
 
-</resources>
-    <!-- _______________________________архив пусть пока тут валяется______________________________
+</resources><!-- _______________________________архив пусть пока тут валяется______________________________
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -67,32 +88,32 @@
     android:padding="@dimen/Padding_20">>
     
 -->
-<!-- work in progress
-<ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:src="@drawable/work_in_progress"/>
+    <!-- work in progress
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:src="@drawable/work_in_progress"/>
 
-    <TextView
-        android:orientation="vertical"
-        android:padding="@dimen/Padding_20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/TBD"
-        android:textColor="@color/black_setting_menu"
-        android:textSize="@dimen/text_normal" />
--->
-<!-- пример тулбара пусть тут лежит пока
-<androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:navigationIcon="@drawable/ic_left_arrow"
-        app:title="@string/settings" > -->
+        <TextView
+            android:orientation="vertical"
+            android:padding="@dimen/Padding_20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/TBD"
+            android:textColor="@color/black_setting_menu"
+            android:textSize="@dimen/text_normal" />
+    -->
+    <!-- пример тулбара пусть тут лежит пока
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:navigationIcon="@drawable/ic_left_arrow"
+            app:title="@string/settings" > -->
 
 
 
