--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="S7_Green">#C4D600</color>
     <color name="S7_Purple">#512D6D</color>
+    <color name="YP_Blue_Light">#9FBBF3</color>
+    <color name="YP_Light_Gray">#E6E8EB</color>
 
 
 </resources>
