--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="cornerRadius">@dimen/Rad_Butt_main</item>
     </style>
 
-    <style name="main_Layout_TextToolbar"> <!-- Стиль для текста тулбара главного экрана -->
+    <style name="main_Layout_TextToolbar" parent="TextAppearance.Widget.AppCompat.Toolbar.Title"> <!-- Стиль для текста тулбара главного экрана -->
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -57,7 +57,7 @@
         <item name="tint">?attr/colorOnPrimary</item>
     </style>
     <!-- __________________Стили для тулбара на всех activity кроме main________________________ -->
-    <style name="toolbar_Dimensions"> <!-- Стиль для тулбара -->
+    <style name="toolbar_Dimensions" parent="TextAppearance.Widget.AppCompat.Toolbar.Title"> <!-- Стиль для тулбара -->
         <item name="navigationIcon">@drawable/ic_left_arrow</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -77,46 +77,7 @@
         <item name="android:textSize">@dimen/text_22</item>
     </style>
 
-</resources><!-- _______________________________архив пусть пока тут валяется______________________________
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/Padding_20">>
-    
--->
-    <!-- work in progress
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:src="@drawable/work_in_progress"/>
-
-        <TextView
-            android:orientation="vertical"
-            android:padding="@dimen/Padding_20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/TBD"
-            android:textColor="@color/black_setting_menu"
-            android:textSize="@dimen/text_normal" />
-    -->
-    <!-- пример тулбара пусть тут лежит пока
-    <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:navigationIcon="@drawable/ic_left_arrow"
-            app:title="@string/settings" > -->
-
-
-
+</resources>
 
 
 
