--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
@@ -14,6 +13,14 @@
         android:layout_height="wrap_content"
         app:title="@string/search"
         app:titleTextColor="?attr/colorOnPrimary" />
+
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginHorizontal="@dimen/search_bar_padding_horizontal"
+        android:layout_marginVertical="@dimen/search_bar_padding_vertical"
+        style="@style/search_bar" />
 
 
     <ImageView
