--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,9 @@
     <dimen name="Main_weight_butt">1</dimen>
     <dimen name="Sett_item_height">61dp</dimen>
     <dimen name="Sett_item_marginTop">24dp</dimen>
+    <dimen name="search_bar_padding_horizontal">16dp</dimen>
+    <dimen name="search_bar_padding_vertical">8dp</dimen>
+    <dimen name="Rad_search_bar">8dp</dimen>
 </resources>
 
 
