--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,6 +77,23 @@
         <item name="android:textSize">@dimen/text_22</item>
     </style>
 
+
+    <style name="search_bar" parent="ThemeOverlay.Material3.TextInputEditText">
+
+        <item name="android:maxLines">1</item>
+        <item name="android:hint">@string/search_title</item>
+        <item name="android:textColorHint">?attr/colorSecondaryVariant</item>
+        <item name="android:inputType">text</item>
+        <item name="android:drawableStart">@drawable/ic_search</item>
+        <item name="android:drawableTint">?attr/colorOnSecondary</item>
+        <item name="android:drawablePadding">@dimen/search_bar_padding_horizontal</item>
+        <item name="android:padding">@dimen/search_bar_padding_vertical</item>
+        <item name="android:background">@drawable/search_bar</item>
+        <item name="android:textCursorDrawable">@drawable/ic_cursor</item>
+        <item name="android:textColor">?attr/colorSecondary</item>
+        <item name="android:textIsSelectable">true</item>
+        <item name="android:focusedByDefault">true</item>
+    </style>
 </resources>
 
 
