--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
-    <style name="setting_Layout_Items"> <!-- Стйки -->
+    <style name="setting_Layout_Items"> <!-- Сроки /кнопки -->
         <item name="android:backgroundTint">?attr/colorPrimary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textSize">@dimen/text_16</item>
