Corrected the writing of styles, themes, colors, strings. The cancellation cross in the search field has been replaced.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
     android:orientation="vertical"
-    android:padding="@dimen/Padding_20">
+    android:padding="@dimen/padding_20">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,29 +16,32 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:text="@string/app_name"
-            style="@style/main_Layout_TextToolbar"/>
+            style="@style/main_layout_text_toolbar" />
     </androidx.appcompat.widget.Toolbar>
 
-    <Button style="@style/main_Layout_Button_Style"
+    <Button
+        style="@style/main_layout_button_style"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/Main_height_butt"
-        android:layout_weight="@dimen/Main_weight_butt"
+        android:layout_height="@dimen/main_height_butt"
+        android:layout_weight="@dimen/main_weight_butt"
         android:id="@+id/button_search"
         android:text="@string/search"
         app:icon="@drawable/ic_search"/>
 
-    <Button style="@style/main_Layout_Button_Style"
+    <Button
+        style="@style/main_layout_button_style"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/Main_height_butt"
-        android:layout_weight="@dimen/Main_weight_butt"
+        android:layout_height="@dimen/main_height_butt"
+        android:layout_weight="@dimen/main_weight_butt"
         android:id="@+id/button_media"
         android:text="@string/media"
         app:icon="@drawable/ic_library"/>
 
-    <Button style="@style/main_Layout_Button_Style"
+    <Button
+        style="@style/main_layout_button_style"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/Main_height_butt"
-        android:layout_weight="@dimen/Main_weight_butt"
+        android:layout_height="@dimen/main_height_butt"
+        android:layout_weight="@dimen/main_weight_butt"
         android:id="@+id/button_settings"
         android:text="@string/settings"
         app:icon="@drawable/ic_settings"/>
