--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
@@ -9,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        style="@style/toolbar_Dimensions"
+        style="@style/toolbar_dimensions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/media">
@@ -17,16 +16,16 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
-        style="@style/work_In_Progress_Image"
+        style="@style/work_in_progress_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
     <TextView
-        style="@style/work_In_Progress_Text"
+        style="@style/work_in_progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:titleTextColor="?attr/colorOnPrimary" />/>
+        app:titleTextColor="?attr/colorOnPrimary" />
 
 </LinearLayout>
