--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,42 +1,42 @@
 <resources>
 
     <style name="Theme.PlaylistMakerMain" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/YP_Blue</item>
-        <item name="colorPrimaryVariant">@color/YP_White</item>
-        <item name="colorOnPrimary">@color/YP_Black</item>
-        <item name="colorSecondary">@color/YP_White</item>
+        <item name="colorPrimary">@color/yp_blue</item>
+        <item name="colorPrimaryVariant">@color/yp_white</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_white</item>
 
     </style>
 
     <style name="Theme.PlaylistMakerSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/YP_White</item>
-        <item name="colorOnPrimary">@color/YP_Black</item>
-        <item name="colorSecondary">@color/YP_Black</item>
-        <item name="colorPrimaryVariant">@color/Search_bar_day</item>
-        <item name="colorSecondaryVariant">@color/Search_bar_day_text</item>
+        <item name="colorPrimary">@color/yp_white</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_black</item>
+        <item name="colorPrimaryVariant">@color/search_bar_day</item>
+        <item name="colorSecondaryVariant">@color/search_bar_day_text</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
     </style>
 
     <style name="Theme.PlaylistMakerMedia" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/YP_White</item>
-        <item name="colorOnPrimary">@color/YP_Black</item>
-        <item name="colorSecondary">@color/YP_Black</item>
+        <item name="colorPrimary">@color/yp_white</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
     </style>
 
     <style name="Theme.PlaylistMakerSettings" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/YP_White</item>
-        <item name="colorOnPrimary">@color/YP_Black</item>
-        <item name="colorSecondary">@color/YP_Black</item>
+        <item name="colorPrimary">@color/yp_white</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
-        <item name="thumbTint">@color/YP_Text_Gray</item>
-        <item name="trackTint">@color/YP_Light_Gray</item>
+        <item name="thumbTint">@color/yp_text_gray</item>
+        <item name="trackTint">@color/yp_light_gray</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/YP_White</item>
-        <item name="colorOnPrimary">@color/YP_Black</item>
-        <item name="colorSecondary">@color/YP_White</item>
+        <item name="colorPrimary">@color/yp_white</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_white</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
 
     </style>
